<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:orientation="vertical">
    <TextView
        android:layout_marginBottom="24dp"
        android:textColor="@color/black"
        style="@style/TextTitle"
        android:text="@string/add_vehicles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/NameOfVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edtNameOfVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    <TextView
        android:text="@string/vehicle_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/spnType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edtColorOfVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/vehicle_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edtLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/vehicle_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edtBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <Button
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginHorizontal="8dp"
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
        <Button
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginHorizontal="8dp"
            android:id="@+id/btnAddVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_your_vehicle" />
    </LinearLayout>
</LinearLayout>