<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.MoreFunctionFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary">

        <TextView
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="Thêm..."
            android:textColor="@color/white"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/idPolicyandprivacy"
            style="@style/TextElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Policyandprivacy" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A6A6A6" />

        <TextView
            android:id="@+id/idShare"
            style="@style/TextElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/share" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A6A6A6" />

        <TextView
            android:id="@+id/idEvaluate"
            style="@style/TextElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/evaluate" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A6A6A6" />

        <TextView
            android:id="@+id/idSupport"
            style="@style/TextElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/support" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A6A6A6" />
    </LinearLayout>
</LinearLayout>