<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.customer.activities.CarWashServiceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvThongtin"
                style="@style/TextElement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Thông tin đặt lịch"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvChooseVehicle"
                style="@style/TextElement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvThongtin"
                android:layout_marginVertical="8dp"
                android:text="@string/choose_vehicles" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="8dp"
                android:layout_below="@id/tvChooseVehicle"
                android:background="@color/viewColor" />

            <Spinner
                android:background="@drawable/boder_gridlayout_choosed_time"
                android:id="@+id/spnVehicleCar"
                style="@style/TextElement"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/spnVehicleCar"
                android:background="@color/viewColor" />

            <LinearLayout
                android:id="@+id/tvChooseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvChooseDate1"
                    style="@style/TextElement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_date" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/tvChooseDate1"
                    android:background="@color/viewColor" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boder_gridlayout_choosed_time"
                    android:layout_below="@id/view3"
                    android:text="Bấm vào đây để chọn ngày"
                    android:textColor="@color/black" />
            </LinearLayout>


            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tvChooseDate"
                android:background="@color/viewColor" />

            <TextView
                android:id="@+id/tvChooseTime"
                style="@style/TextElement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view4"
                android:layout_marginVertical="8dp"
                android:text="@string/choose_time" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tvChooseTime"
                android:background="@drawable/boder_gridlayout_choosed_time" />

            <TextView
                android:id="@+id/tvService"
                style="@style/TextElement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvTime"
                android:layout_marginTop="8dp"
                android:text="@string/service" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvService"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:background="@drawable/boder_gridlayout_choosed_time" />

            <TextView
                android:id="@+id/tvNote"
                style="@style/TextElement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvService"
                android:layout_marginTop="8dp"
                android:text="Ghi chú" />

            <EditText
                android:background="@drawable/boder_gridlayout_choosed_time"
                android:id="@+id/edtNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNote" />

            <!--            <TextView-->
            <!--                android:id="@+id/tv"-->
            <!--                style="@style/TextElement"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_below="@id/rvService"-->
            <!--                android:layout_marginTop="8dp"-->
            <!--                android:text="Ghi chú" />-->

            <!--            <EditText-->
            <!--                android:id="@+id/edtNote"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_below="@id/tvNote" />-->
        </RelativeLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/vehicle_activity_padding">

        <Button
            android:id="@+id/btnBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/card"
            android:text="@string/book"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>