<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="@dimen/padding_size_8dp"
    tools:context=".ui.customer.activities.UserDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="@dimen/size_200dp"
                    android:layout_height="@dimen/size_200dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_baseline_account_circle_24" />

                <ImageView
                    android:id="@+id/icImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgAvatar"
                    android:layout_toEndOf="@id/imgAvatar"
                    android:src="@drawable/ic_baseline_image_24" />

                <ImageView
                    android:id="@+id/icCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgAvatar"
                    android:layout_toStartOf="@id/imgAvatar"
                    android:src="@drawable/ic_baseline_camera_alt_24" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/margin_size_8dp"
                android:layout_marginVertical="@dimen/margin_size_16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name" />

                <EditText
                    android:id="@+id/edit_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                    <EditText
                        android:id="@+id/edit_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_50dp"
                        android:backgroundTint="@color/black"
                        android:focusable="false"
                        android:paddingHorizontal="@dimen/padding_size_8dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/address" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40dp"
                    android:layout_marginTop="@dimen/margin_size_8dp"
                    android:background="@drawable/boder_button_pri"
                    android:text="@string/update_infor" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>